tests/should_fail/let_struct_on_bool.nv
module fail
// Let destructure: struct on bool value
struct Point { x: Int, y: Int }
let Point { x, y } = true
